bpo-36814: ensure os.posix_spawn() handles None (GH-13144)

Fix an issue where os.posix_spawn() would incorrectly raise a TypeError
when file_actions is None.